--- a/NonMaps/src/war/style.css
+++ b/NonMaps/src/war/style.css
@@ -210,8 +210,7 @@ caption {
 }
 
 .dialogcontainer {
-	/* 	min-width: 22em; */
-	max-width: 100%;
+	width: 100%;
 	margin: 0;
 	padding: 0;
 	position: relative;
